# rtodo

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  dispatch.rs  error.rs  lib.rs  main.rs  models.rs  style.rs  ui.rs  workspace.rs
src/models/: priority.rs  status.rs  subtask.rs  task.rs
src/tui/: app.rs  apply.rs  draft.rs  effect.rs  intent.rs  mod.rs  overlay.rs  projects.rs  render.rs  resolve.rs  sidebar.rs  tree.rs  widgets.rs
src/tui/project/: apply.rs  handle.rs  mod.rs  render.rs
src/tui/views/: mod.rs  project.rs  workspace.rs
src/tui/workspace/: apply.rs  handle.rs  mod.rs  render.rs
tests/: task_workflow.rs
