[package]
name = "rtodo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
owo-colors = { version = "3", features = ["supports-colors"] }
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[profile.release]
opt-level = 3    # maximum optimization
strip = true     # strip debug symbols (smaller binary)
